Fixed usage of deprecated primitive wrapper types constructors
https://docs.oracle.com/javase/9/docs/api/java/lang/Integer.html#Integer-int-

Signed-off-by: Pierre-Louis Palant <palant@byte-lab.com>